// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected 1`] = `
<div>
  <mock-box
    classname="makeStyles-card-4"
  >
    <mock-box
      mb="3"
    >
      <mock-typography
        color="textSecondary"
        variant="h5"
      >
        Featured Site
        <a
          href="/reefs/2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-launchIcon-7"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </mock-typography>
    </mock-box>
    <mock-card>
      <div
        class="MuiGrid-root makeStyles-cardWrapper-1 makeStyles-mobileCardWrapperWithNoImage-3 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-10"
          style="margin-bottom: 2rem; max-height: 14rem;"
        >
          <mock-box
            fontweight="400"
            pb="0.5rem"
            pl="0.5rem"
            pt="1.5rem"
          >
            <mock-hidden
              xsdown="false"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              />
              <mock-typography
                classname="makeStyles-reefRegionName-8"
                color="textSecondary"
                variant="h6"
              />
            </mock-hidden>
            <mock-typography
              color="textSecondary"
              variant="caption"
            >
              MEAN DAILY SURFACE TEMP. (°C)
            </mock-typography>
          </mock-box>
          Mock-Line
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-2"
          style="display: flex;"
        >
          <div
            class="makeStyles-metricsContainer-6"
          >
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                SURFACE TEMP
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                23.0
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   °C
                </mock-typography>
              </mock-typography>
            </div>
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                HEAT STRESS
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                4.9
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   DHW
                </mock-typography>
              </mock-typography>
            </div>
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                TEMP AT 0m
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                39.0
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   °C
                </mock-typography>
              </mock-typography>
            </div>
          </div>
        </div>
      </div>
    </mock-card>
  </mock-box>
</div>
`;

exports[`renders loading as expected 1`] = `
<div>
  <mock-box
    classname="makeStyles-card-12"
  >
    <mock-box
      mb="3"
    >
      <mock-typography
        color="textSecondary"
        variant="h5"
      >
        Selected Site
        <a
          href="/reefs/2"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-launchIcon-15"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
          </svg>
        </a>
      </mock-typography>
    </mock-box>
    <mock-card>
      <div
        class="MuiGrid-root makeStyles-cardWrapper-9 makeStyles-mobileCardWrapperWithNoImage-11 MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-lg-10"
          style="margin-bottom: 2rem; max-height: 14rem;"
        >
          <mock-box
            fontweight="400"
            pb="0.5rem"
            pl="0.5rem"
            pt="1.5rem"
          >
            <mock-hidden
              xsdown="false"
            >
              <mock-typography
                color="textSecondary"
                variant="h5"
              />
              <mock-typography
                classname="makeStyles-reefRegionName-16"
                color="textSecondary"
                variant="h6"
              />
            </mock-hidden>
            <mock-typography
              color="textSecondary"
              variant="caption"
            >
              MEAN DAILY SURFACE TEMP. (°C)
            </mock-typography>
          </mock-box>
          Mock-Line
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-2"
          style="display: flex;"
        >
          <div
            class="makeStyles-metricsContainer-14"
          >
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                SURFACE TEMP
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                23.0
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   °C
                </mock-typography>
              </mock-typography>
            </div>
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                HEAT STRESS
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                4.9
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   DHW
                </mock-typography>
              </mock-typography>
            </div>
            <div>
              <mock-typography
                color="textSecondary"
                variant="caption"
              >
                TEMP AT 0m
              </mock-typography>
              <mock-typography
                color="primary"
                variant="h4"
              >
                39.0
                 
                <mock-typography
                  component="span"
                  variant="h6"
                >
                   °C
                </mock-typography>
              </mock-typography>
            </div>
          </div>
        </div>
      </div>
    </mock-card>
  </mock-box>
</div>
`;
